--- a/html/imagens_e_atributos/index.html
+++ b/html/imagens_e_atributos/index.html
@@ -10,7 +10,7 @@
 
     <h2>Saga Senhor dos Anéis (J.R.R. Tolkien)</h2>
     <h3>O Senhor dos Anéis: A Sociedade do Anel</h3>
-    <img src="/public/lesson_img/imagens_e_atributos/a-sociedade-do-anel.webp" height="300px">
+    <img src="public/a-sociedade-do-anel.webp" height="300px">
     <p>
       Sinopse: A jornada épica começa com Frodo Bolseiro, um hobbit que deve
       destruir um poderoso anel que pode destruir a Terra Média se cair nas mãos
@@ -18,7 +18,7 @@
       embarca em uma perigosa jornada para Mordor.
     </p>
     <h3>O Senhor dos Anéis: As Duas Torres</h3>
-    <img src="/public/lesson_img/imagens_e_atributos/as-duas-torres.jpg" width="200">
+    <img src="public/as-duas-torres.jpg" width="200">
     <p>
       Sinopse: A Sociedade do Anel é dividida após uma grande batalha. Enquanto
       Frodo e seu fiel companheiro Sam continuam a jornada para Mordor, os
@@ -26,7 +26,7 @@
       ameaça do Senhor do Escuro, Sauron.
     </p>
     <h3>O Senhor dos Anéis: O Retorno do Rei</h3>
-    <img src="/public/lesson_img/imagens_e_atributos/o-retorno-do-rei.png" height="300" width="200">
+    <img src="public/o-retorno-do-rei.png" height="300" width="200">
     <p>
       Sinopse: A batalha final se aproxima enquanto Frodo se esforça para
       destruir o Anel em Mordor. Enquanto isso, as forças do bem lutam contra as
@@ -61,7 +61,7 @@
 
     <h2>Saga Percy Jackson e os Olimpianos (Rick Riordan)</h2>
     <h3>O Ladrão de Raios</h3>
-    <img src="/public/lesson_img/imagens_e_atributos/o-ladrao-de-raios.jpg" alt="Capa do livro Percy Jackson O Ladrão de Raios">
+    <img src="public/o-ladrao-de-raios.jpg" alt="Capa do livro Percy Jackson O Ladrão de Raios">
     <p>
       Sinopse: Percy Jackson descobre que é um semideus, filho de Poseidon, e
       embarca em uma missão para recuperar o raio de Zeus, roubado e acusado
@@ -69,8 +69,7 @@
       enfrenta desafios dos deuses do Olimpo.
     </p>
     <h3>O Mar de Monstros</h3>
-    <img src="public/lesson_img/imagens_e_atributos/o-mar-de-monstros.jpg" alt="Capa do livro Percy Jackson O Mar de Monstros">
-    <!-- <img src="/public/lesson_img/imagens_e_atributos/o-mar-de-monstros.jpg" alt="Capa do livro Percy Jackson O Mar de Monstros"> -->
+    <img src="public/o-mar-de-monstros.jpg" alt="Capa do livro Percy Jackson O Mar de Monstros">
     <p>
       Sinopse: Percy e seus amigos embarcam em uma aventura perigosa para
       encontrar o Velocino de Ouro, que pode curar a árvore de Thalia,
@@ -78,21 +77,21 @@
       desafios épicos, eles descobrem segredos surpreendentes.
     </p>
     <h3>A Maldição do Titã</h3>
-    <img src="/public/lesson_img/imagens_e_atributos/a-maldicao-do-tita.jpg" alt="Capa do livro Percy Jackson A Maldição do Titã">
+    <img src="public/a-maldicao-do-tita.jpg" alt="Capa do livro Percy Jackson A Maldição do Titã">
     <p>
       Sinopse: Percy se une a novos aliados para enfrentar a maldição do titã
       Atlas e impedir que ele se liberte do Tártaro. Nesta aventura emocionante,
       o destino dos deuses e da humanidade está em jogo.
     </p>
     <h3>A Batalha do Labirinto</h3>
-    <img src="/public/lesson_img/imagens_e_atributos/a-batalha-do-labirinto.jpg" alt="Capa do livro Percy Jackson A Batalha do Labirinto">
+    <img src="public/a-batalha-do-labirinto.jpg" alt="Capa do livro Percy Jackson A Batalha do Labirinto">
     <p>
       Sinopse: Percy e seus amigos exploram um perigoso labirinto que se
       encontra no centro do Acampamento Meio-Sangue. Eles enfrentam monstros
       temíveis e desvendam segredos que podem abalar o mundo dos deuses.
     </p>
     <h3>O Último Olimpiano</h3>
-    <img src="/public/lesson_img/imagens_e_atributos/o-ultimo-olimpiano.jpg" alt="Capa do livro Percy Jackson O Último Olimpiano">
+    <img src="public/o-ultimo-olimpiano.jpg" alt="Capa do livro Percy Jackson O Último Olimpiano">
     <p>
       Sinopse: A profecia se concretiza, e a batalha final entre os deuses
       olimpianos e os titãs se aproxima. Percy lidera seus amigos na defesa do
