feat: Adds lesson on links and anchoring, and creates the page that will connect all other lessons.

--- a/html/Quebra_e_regua_horizontal/index.html
+++ b/html/Quebra_e_regua_horizontal/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  <h1>Quebra de linha e régua horizontal</h1>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <a href="/links_das_aulas.html">Retorne para a pagina de navegação</a>
+    <h1>Quebra de linha e régua horizontal</h1>
 
-    <p>Primeira linha.<br>Segunda linha.<br>Terceira linha.</p>
+    <p>Primeira linha.<br />Segunda linha.<br />Terceira linha.</p>
 
-		<hr>
+    <hr />
 
-    <p>Quarta linha.<br>Quinta linha.<br>Sextalinha.</p>
-</body>
+    <p>Quarta linha.<br />Quinta linha.<br />Sextalinha.</p>
+  </body>
 </html>
