--- a/html/organizadores_de_codigo/div_e_span.html
+++ b/html/organizadores_de_codigo/div_e_span.html
@@ -6,6 +6,7 @@
   <title>Organizadores de código</title>
 </head>
 <body>
+  <a href="/links_das_aulas.html">Retorne para a pagina de navegação</a>
   <h1>Organização de código com div e span</h1>
 
 	<p>
