--- a/html/Comentarios/index.html
+++ b/html/Comentarios/index.html
@@ -6,6 +6,7 @@
     <title>Comentários</title>
   </head>
   <body>
+    <a href="/links_das_aulas.html">Retorne para a pagina de navegação</a>
     <!-- Esta é uma seção de cabeçalho -->
     <h1>Exemplo de Uso de Comentários</h1>
     <p>Bem-vindo ao nosso site!</p>
