--- a/html/elementos_de_formatacao/index.html
+++ b/html/elementos_de_formatacao/index.html
@@ -6,6 +6,7 @@
     <title>Elementos de Formatação</title>
   </head>
   <body>
+    <a href="/links_das_aulas.html">Retorne para a pagina de navegação</a>
     <h1>Elementos de Formatação</h1>
     <h2>Elementos antes do HTML5</h2>
     <p>
