--- a/html/imagens_e_atributos/index.html
+++ b/html/imagens_e_atributos/index.html
@@ -6,6 +6,7 @@
     <title>Lista de Leitura</title>
   </head>
   <body>
+    <a href="/links_das_aulas.html">Retorne para a pagina de navegação</a>
     <h1>Lista de Leitura</h1>
 
     <h2>Saga Senhor dos Anéis (J.R.R. Tolkien)</h2>
