--- a/html/titulos_e_paragrafo/index.html
+++ b/html/titulos_e_paragrafo/index.html
@@ -6,6 +6,7 @@
     <title>Títulos e parágrafos</title>
   </head>
   <body>
+    <a href="/links_das_aulas.html">Retorne para a pagina de navegação</a>
     <h1>Título 1: o título principal da página</h1>
     <p>Primeiro parágrafo</p>
     <h2>Título 2</h2>
