--- a/html/Quebra_e_regua_horizontal/index.html
+++ b/html/Quebra_e_regua_horizontal/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <a href="/links_das_aulas.html">Retorne para a pagina de navegação</a>
+    <a href="/">Retorne para a pagina de navegação</a>
     <h1>Quebra de linha e régua horizontal</h1>
 
     <p>Primeira linha.<br />Segunda linha.<br />Terceira linha.</p>
