--- a/html/exercicios/exercicio-1/Escrevendo_um_artigo.html
+++ b/html/exercicios/exercicio-1/Escrevendo_um_artigo.html
@@ -16,7 +16,7 @@
     "
   >
     <header style="padding: 20px">
-      <a href="/links_das_aulas.html">Retorne para a pagina de navegação</a>
+      <a href="/">Retorne para a pagina de navegação</a>
       <h1>Júpiter: O Gigante Gasoso do Sistema Solar</h1>
     </header>
 
