--- a/html/links_e_ancoragem/index.html
+++ b/html/links_e_ancoragem/index.html
@@ -6,7 +6,7 @@
     <title>Trabalhando com links</title>
   </head>
   <body>
-    <a href="/links_das_aulas.html">Retorne para a pagina de navegação</a>
+    <a href="http://localhost:5500">Retorne para a pagina de navegação</a>
     <h1>Trabalhando com links</h1>
 
     <div>
