feat: lesson on internal links

--- a/index.html
+++ b/index.html
@@ -9,12 +9,10 @@
     <header>
       <h1>Navegue entre as aulas</h1>
       <nav>
-        <ul>
-          <li><a href="#HTML">HTML</a></li>
-          <li><a href="#CSS">CSS</a></li>
-          <li><a href="#Tailwind">Tailwind</a></li>
-          <li><a href="#JavaScript">JavaScript</a></li>
-        </ul>
+        <a href="#HTML">HTML</a> |
+        <a href="#CSS">CSS</a> |
+        <a href="#Tailwind">Tailwind</a> |
+        <a href="#JavaScript">JavaScript</a> 
       </nav>
     </header>
     <main>
@@ -52,6 +50,10 @@
             <li>
               <a href="html/links_e_ancoragem/index.html"
                 >Aula 7: Trabalhando com links</a>
+            </li>
+            <li>
+              <a href="html/ancoras_internas/index.html"
+                >Aula 8: Links internos</a>
             </li>
           </ul>
         </nav>
