feat: lesson on external links

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <a href="#Tailwind">Tailwind</a> |
         <a href="#JavaScript">JavaScript</a> 
       </nav>
+      <p>Acesse o meu <a href="https://github.com/Guilherme-210" target="_blank">GitHub</a></p>
     </header>
     <main>
       <section>
