--- a/index.html
+++ b/index.html
@@ -66,6 +66,11 @@
                 href="html/exercicios/exercicio-1/Escrevendo_um_artigo.html"
                 >Exercício 1: Escreva um artigo.</a>
             </li>
+            <li>
+              <a
+                href="html/exercicios/exercicio-2/index.html"
+                >Exercício 2: Criando um site com navegação.</a>
+            </li>
           </ul>
         </nav>
       </section>
