feat: lesson on lists

--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
               <a href="html/ancoras_internas/index.html"
                 >Aula 8: Links internos</a>
             </li>
+            <li>
+              <a href="html/listas/index.html"
+                >Aula 9: Trabalhando com listas</a>
+            </li>
           </ul>
         </nav>
         <h4>Exercícios</h4>
