feat: creating album list

--- a/index.html
+++ b/index.html
@@ -75,6 +75,11 @@
                 href="html/exercicios/exercicio-2/index.html"
                 >Exercício 2: Criando um site com navegação.</a>
             </li>
+            <li>
+              <a
+                href="html/exercicios/exercicio-3/index.html"
+                >Exercício 3: Criando uma lista de álbuns.</a>
+            </li>
           </ul>
         </nav>
       </section>
