feat: lesson on table

--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@
               <a href="html/listas/index.html"
                 >Aula 9: Trabalhando com listas</a>
             </li>
+            <li>
+              <a href="html/tabela/index.html"
+                >Aula 10: Criação de tabelas</a>
+            </li>
           </ul>
         </nav>
         <h4>Exercícios</h4>
