feat: exercise 8 Creating a Subscribers Table

--- a/index.html
+++ b/index.html
@@ -84,6 +84,11 @@
                 href="html/exercicios/exercicio-3/index.html"
                 >Exercício 3: Criando uma lista de álbuns.</a>
             </li>
+            <li>
+              <a
+                href="html/exercicios/exercicio-4/index.html"
+                >Exercício 4: Criando uma Tabela de Inscritos.</a>
+            </li>
           </ul>
         </nav>
       </section>
