feat: addition of input types class

--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
               <a href="html/formularios/index.html"
                 >Aula 11: Trabalhando com formulários no HTML</a>
             </li>
+            <li>
+              <a href="html/tipos_de_input/index.html"
+                >Aula 12: Conhecendo os tipos de input no HTML</a>
+            </li>
           </ul>
         </nav>
         <h4>Exercícios</h4>
