feat: lesson five registration form

--- a/index.html
+++ b/index.html
@@ -97,6 +97,11 @@
                 href="html/exercicios/exercicio-4/index.html"
                 >Exercício 4: Criando uma Tabela de Inscritos.</a>
             </li>
+            <li>
+              <a
+                href="html/exercicios/exercicio-5/index.html"
+                >Exercício 5: Formulário de Inscrição.</a>
+            </li>
           </ul>
         </nav>
       </section>
