feat: lesson on semantic element

--- a/index.html
+++ b/index.html
@@ -9,68 +9,79 @@
     <header>
       <h1>Navegue entre as aulas</h1>
       <nav>
-        <a href="#HTML">HTML</a> |
-        <a href="#CSS">CSS</a> |
+        <a href="#HTML">HTML</a> | <a href="#CSS">CSS</a> |
         <a href="#Tailwind">Tailwind</a> |
-        <a href="#JavaScript">JavaScript</a> 
+        <a href="#JavaScript">JavaScript</a>
       </nav>
-      <p>Acesse o meu <a href="https://github.com/Guilherme-210" target="_blank">GitHub</a></p>
+      <p>
+        Acesse o meu
+        <a href="https://github.com/Guilherme-210" target="_blank">GitHub</a>
+      </p>
     </header>
     <main>
-      <section>
-        <h2 id="HTML">HTML</h2>
+      <section id="HTML">
+        <h2>HTML</h2>
         <h4>Aulas</h4>
         <nav>
           <ul>
             <li>
               <a href="html/titulos_e_paragrafo/index.html"
-                >Aula 1: Elementos de parágrafo e título.</a>
+                >Aula 1: Elementos de parágrafo e título.</a
+              >
             </li>
             <li>
               <a href="html/elementos_de_formatacao/index.html"
-                >Aula 2: Elementos de formatação.</a>
+                >Aula 2: Elementos de formatação.</a
+              >
             </li>
             <li>
-              <a href="html/Comentarios/index.html"
-                >Aula 3: Comentários.</a>
+              <a href="html/Comentarios/index.html">Aula 3: Comentários.</a>
             </li>
             <li>
               <a href="html/imagens_e_atributos/index.html"
-                >Aula 4: Elementos de imagens e atributos.</a>
+                >Aula 4: Elementos de imagens e atributos.</a
+              >
             </li>
             <li>
-              <a
-                href="html/Quebra_e_regua_horizontal/index.html"
-                >Aula 5: Quebras de linha e régua horizontal.</a>
+              <a href="html/Quebra_e_regua_horizontal/index.html"
+                >Aula 5: Quebras de linha e régua horizontal.</a
+              >
             </li>
             <li>
-              <a
-                href="html/organizadores_de_codigo/div_e_span.html"
-                >Aula 6: Organizando o código com 'div' e 'span'.</a>
+              <a href="html/organizadores_de_codigo/div_e_span.html"
+                >Aula 6: Organizando o código com 'div' e 'span'.</a
+              >
             </li>
             <li>
               <a href="html/links_e_ancoragem/index.html"
-                >Aula 7: Trabalhando com links</a>
+                >Aula 7: Trabalhando com links</a
+              >
             </li>
             <li>
               <a href="html/ancoras_internas/index.html"
-                >Aula 8: Links internos</a>
+                >Aula 8: Links internos</a
+              >
             </li>
             <li>
               <a href="html/listas/index.html"
-                >Aula 9: Trabalhando com listas</a>
+                >Aula 9: Trabalhando com listas</a
+              >
             </li>
             <li>
-              <a href="html/tabela/index.html"
-                >Aula 10: Criação de tabelas</a>
+              <a href="html/tabela/index.html">Aula 10: Criação de tabelas</a>
             </li>
             <li>
               <a href="html/formularios/index.html"
-                >Aula 11: Trabalhando com formulários no HTML</a>
+                >Aula 11: Trabalhando com formulários no HTML</a
+              >
             </li>
             <li>
               <a href="html/tipos_de_input/index.html"
-                >Aula 12: Conhecendo os tipos de input no HTML</a>
+                >Aula 12: Conhecendo os tipos de input no HTML</a
+              >
+            </li>
+            <li>
+              <a href="html/semantica/index.html">Aula 13: Tags Semânticas</a>
             </li>
           </ul>
         </nav>
@@ -78,45 +89,45 @@
         <nav>
           <ul>
             <li>
-              <a
-                href="html/exercicios/exercicio-1/Escrevendo_um_artigo.html"
-                >Exercício 1: Escreva um artigo.</a>
+              <a href="html/exercicios/exercicio-1/Escrevendo_um_artigo.html"
+                >Exercício 1: Escreva um artigo.</a
+              >
             </li>
             <li>
-              <a
-                href="html/exercicios/exercicio-2/index.html"
-                >Exercício 2: Criando um site com navegação.</a>
+              <a href="html/exercicios/exercicio-2/index.html"
+                >Exercício 2: Criando um site com navegação.</a
+              >
             </li>
             <li>
-              <a
-                href="html/exercicios/exercicio-3/index.html"
-                >Exercício 3: Criando uma lista de álbuns.</a>
+              <a href="html/exercicios/exercicio-3/index.html"
+                >Exercício 3: Criando uma lista de álbuns.</a
+              >
             </li>
             <li>
-              <a
-                href="html/exercicios/exercicio-4/index.html"
-                >Exercício 4: Criando uma Tabela de Inscritos.</a>
+              <a href="html/exercicios/exercicio-4/index.html"
+                >Exercício 4: Criando uma Tabela de Inscritos.</a
+              >
             </li>
             <li>
-              <a
-                href="html/exercicios/exercicio-5/index.html"
-                >Exercício 5: Formulário de Inscrição.</a>
+              <a href="html/exercicios/exercicio-5/index.html"
+                >Exercício 5: Formulário de Inscrição.</a
+              >
             </li>
           </ul>
         </nav>
       </section>
-      <section>
-        <h2 id="CSS">CSS</h2>
+      <section id="CSS">
+        <h2>CSS</h2>
         <h4>Aulas</h4>
         <h4>Exercícios</h4>
       </section>
-      <section>
-        <h2 id="Tailwind">Tailwind</h2>
+      <section id="Tailwind">
+        <h2>Tailwind</h2>
         <h4>Aulas</h4>
         <h4>Exercícios</h4>
       </section>
-      <section>
-        <h2 id="JavaScript">JavaScript</h2>
+      <section id="JavaScript">
+        <h2>JavaScript</h2>
         <h4>Aulas</h4>
         <h4>Exercícios</h4>
       </section>
