feat: lesson Accessibility Attributes

--- a/index.html
+++ b/index.html
@@ -81,7 +81,10 @@
               >
             </li>
             <li>
-              <a href="html/semantica/index.html">Aula 13: Tags Semânticas</a>
+              <a href="html/semantica/index.html">Aula 13: Tags semânticas</a>
+            </li>
+            <li>
+              <a href="html/WAI-ARIA_e_acessibilidade/index.html">Aula 13: Atributos de acessibilidade WAI-ARIA</a>
             </li>
           </ul>
         </nav>
