feat: Final lesson HTML

--- a/index.html
+++ b/index.html
@@ -116,6 +116,11 @@
                 >Exercício 5: Formulário de Inscrição.</a
               >
             </li>
+            <li>
+              <a href="html/exercicios/exercicio-final/index.html"
+                >Exercício final: Criando um site completo.</a
+              >
+            </li>
           </ul>
         </nav>
       </section>
