feat: navigation system between html lessons has been added

--- a/html/Quebra_e_regua_horizontal/index.html
+++ b/html/Quebra_e_regua_horizontal/index.html
@@ -3,10 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Quebra de linha e régua horizontal</title>
   </head>
   <body>
-    <a href="/">Retorne para a pagina de navegação</a>
+    <header>
+      <nav>
+        <a href="/html/exercicios/exercicio-1/Escrevendo_um_artigo.html">Exercício 1: Escreva um artigo.</a> | 
+        <a href="/">Central de aulas</a> | 
+        <a href="/html/organizadores_de_codigo/div_e_span.html">Proxima aula: Organizando o código com "div" e "span".</a>
+      </nav>
+      <hr>
+    </header>
     <h1>Quebra de linha e régua horizontal</h1>
 
     <p>Primeira linha.<br />Segunda linha.<br />Terceira linha.</p>
