--- a/html/WAI-ARIA_e_acessibilidade/index.html
+++ b/html/WAI-ARIA_e_acessibilidade/index.html
@@ -5,8 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Atributos de acessibilidade WAI-ARIA</title>
   </head>
-  <body>
-    <a href="http://localhost:5500">Retorne para a pagina de navegação</a>
+  <body>    
+    <header>
+      <nav>
+        <a href="/html/semantica/index.html">Aula anterior: Tags semânticas</a> | 
+        <a href="/">Central de aulas</a> | 
+        <a href="/html/exercicios/exercicio-final/index.html">Exercício final: Criando um site completo.</a>
+      </nav>
+      <hr>
+    </header>
+
     <h1>Atributos de acessibilidade WAI-ARIA</h1>
 
     <!-- caixa de informação com atributos ARIA -->
