--- a/html/elementos_de_formatacao/index.html
+++ b/html/elementos_de_formatacao/index.html
@@ -6,7 +6,14 @@
     <title>Elementos de Formatação</title>
   </head>
   <body>
-    <a href="http://127.0.0.1:5500">Retorne para a pagina de navegação</a>
+    <header>
+      <nav>
+        <a href="/html/titulos_e_paragrafo/index.html">Aula anterior: Títulos e parágrafos.</a> | 
+        <a href="/">Central de aulas</a> | 
+        <a href="/html/Comentarios/index.html">Proxima aula: Comentários.</a>
+      </nav>
+      <hr>
+    </header>
     <h1>Elementos de Formatação</h1>
     <h2>Elementos antes do HTML5</h2>
     <p>
