--- a/html/exercicios/exercicio-1/Escrevendo_um_artigo.html
+++ b/html/exercicios/exercicio-1/Escrevendo_um_artigo.html
@@ -3,22 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Júpiter: O Gigante Gasoso</title>
+    <title>Exercício 1: Escreva um artigo.</title>
   </head>
-  <body
-    style="
-      text-align: center;
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #000;
-      color: #e2ded2;
-    "
-  >
-    <header style="padding: 20px">
-      <a href="/">Retorne para a pagina de navegação</a>
-      <h1>Júpiter: O Gigante Gasoso do Sistema Solar</h1>
+  <body>
+    <header>
+      <nav>
+        <a href="/html/imagens_e_atributos/index.html">Aula anterior: Elementos de imagens e atributos.</a> |
+        <a href="/">Retorne para a pagina de navegação</a> |
+        <a href="/html/Quebra_e_regua_horizontal/index.html">Proxima aula: Quebras de linha e régua horizontal.</a>
+      </nav>
+      <hr>
     </header>
+
+    <h1>Júpiter: O Gigante Gasoso do Sistema Solar</h1>
 
     <main style="padding: 20px; margin-bottom: 20px">
       <h2>Introdução</h2>
