--- a/html/exercicios/exercicio-3/index.html
+++ b/html/exercicios/exercicio-3/index.html
@@ -3,11 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lista de álbuns</title>
+    <title>Exercício 3: Lista de álbuns</title>
   </head>
   <body>
+    <header>
+      <nav>
+        <a href="/html/listas/index.html">Aula anterior: Trabalhando com listas</a> | 
+        <a href="/">Central de aulas</a> | 
+        <a href="/html/tabela/index.html">Proxima aula: Criação de tabelas</a>
+      </nav>
+      <hr>
+    </header>
+
     <h1>Álbuns de bandas</h1>
-    <a href="http://localhost:5500">Retorne para a pagina de navegação</a>
 
     <ul>
       <li>
