--- a/html/exercicios/exercicio-4/index.html
+++ b/html/exercicios/exercicio-4/index.html
@@ -3,10 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tabela de Inscritos</title>
+  <title>Exercício 4: Tabela de Inscritos</title>
 </head>
 <body>
-    <a href="http://localhost:5500">Retorne para a pagina de navegação</a>
+    <header>
+      <nav>
+        <a href="/html/tabela/index.html">Aula anterior: Criação de tabelas</a> | 
+        <a href="/">Central de aulas</a> | 
+        <a href="/html/formularios/index.html">Proxima aula: Trabalhando com formulários no HTML</a>
+      </nav>
+      <hr>
+    </header>
 
   <h1>Criando uma Tabela de Inscritos</h1>
   <table border="1" style="text-align: center;">
