--- a/html/exercicios/exercicio-5/index.html
+++ b/html/exercicios/exercicio-5/index.html
@@ -3,10 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Formulário de Inscrição</title>
+    <title>Exercício 5: Formulário de Inscrição</title>
   </head>
   <body>
-    <a href="http://localhost:5500">Retorne para a pagina de navegação</a>
+    <header>
+      <nav>
+        <a href="/html/tipos_de_input/index.html">Aula anterior: Conhecendo os tipos de input no HTML</a> | 
+        <a href="/">Central de aulas</a> | 
+        <a href="/html/semantica/index.html">Proxima aula: Tags semânticas</a>
+      </nav>
+      <hr>
+    </header>
+    
     <h1>Formulário de Inscrição</h1>
 
     <form>
