--- a/html/imagens_e_atributos/index.html
+++ b/html/imagens_e_atributos/index.html
@@ -3,10 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lista de Leitura</title>
+    <title>Elementos de imagens e atributos</title>
   </head>
   <body>
-    <a href="/index.html">Retorne para a pagina de navegação</a>
+    <header>
+      <nav>
+        <a href="/html/Comentarios/index.html">Aula anterior: Comentários.</a> | 
+        <a href="/">Central de aulas</a> | 
+        <a href="/html/exercicios/exercicio-1/Escrevendo_um_artigo.html">Exercício 1: Escreva um artigo.</a>
+      </nav>
+      <hr>
+    </header>
+
     <h1>Lista de Leitura</h1>
 
     <h2>Saga Senhor dos Anéis (J.R.R. Tolkien)</h2>
