--- a/html/links_e_ancoragem/index.html
+++ b/html/links_e_ancoragem/index.html
@@ -6,7 +6,15 @@
     <title>Trabalhando com links</title>
   </head>
   <body>
-    <a href="http://localhost:5500">Retorne para a pagina de navegação</a>
+    <header>
+      <nav>
+        <a href="/html/organizadores_de_codigo/div_e_span.html">Aula anterior: Organizando o código com "div" e "span".</a> | 
+        <a href="/">Central de aulas</a> | 
+        <a href="/html/ancoras_internas/index.html">Proxima aula: Links internos</a>
+      </nav>
+      <hr>
+    </header>
+
     <h1>Trabalhando com links</h1>
 
     <div>
