--- a/html/listas/index.html
+++ b/html/listas/index.html
@@ -6,8 +6,16 @@
     <title>Listas</title>
   </head>
   <body>
+    <header>
+      <nav>
+        <a href="/html/exercicios/exercicio-2/index.html">Exercício 2: Criando um site com navegação.</a> | 
+        <a href="/">Central de aulas</a> | 
+        <a href="/html/exercicios/exercicio-3/index.html">Exercício 3: Criando uma lista de álbuns.</a>
+      </nav>
+      <hr>
+    </header>
+
     <h1>Listas no HTML</h1>
-    <a href="http://localhost:5500">Retorne para a pagina de navegação</a>
 
     <p>Lista ordenada de melhores filmes segundo o IMDB:</p>
     <ol>
