--- a/html/organizadores_de_codigo/div_e_span.html
+++ b/html/organizadores_de_codigo/div_e_span.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Organizadores de código</title>
-</head>
-<body>
-  <a href="http://localhost:5500">Retorne para a pagina de navegação</a>
-  <h1>Organização de código com div e span</h1>
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>Organizadores de código</title>
+	</head>
+	<body>
+		<header>
+			<nav>
+				<a href="/html/Quebra_e_regua_horizontal/index.html">Aula anterior: Quebras de linha e régua horizontal.</a> | 
+				<a href="/">Central de aulas</a> | 
+				<a href="/html/links_e_ancoragem/index.html">Proxima aula: Trabalhando com links</a>
+			</nav>
+			<hr>
+		</header>
 
-	<p>
-		Em um texto, o elemento div irá organizar o conteúdo em
-		<div>um bloco, ou seja, como uma quebra de linha.</div>
-		Uma div ocupa todo o espaço horizontal disponível na tela.
-		Já o elemento span irá organizar o conteúdo de forma "inline",
-		ou seja, <span>sem quebra de linha</span> e ocupando apenas
-		<span>a largura do seu conteúdo interno</span>.
-	</p>
-</body>
+		<h1>Organização de código com "div" e "span"</h1>
+
+		<p>
+			Em um texto, o elemento div irá organizar o conteúdo em <div>um bloco, ou seja, como uma quebra de linha.</div> Uma div ocupa todo o espaço horizontal disponível na tela. Já o elemento span irá organizar o conteúdo de forma "inline", ou seja, <span>sem quebra de linha</span> e ocupando apenas <span>a largura do seu conteúdo interno</span>.
+		</p>
+	</body>
 </html>
