--- a/html/tabela/index.html
+++ b/html/tabela/index.html
@@ -5,9 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Criação de tabelas</title>
   </head>
-  <body>
+  <body></body>
+    <header>
+      <nav>
+        <a href="/html/exercicios/exercicio-3/index.html">Exercício 3: Criando uma lista de álbuns.</a> | 
+        <a href="/">Central de aulas</a> | 
+        <a href="/html/exercicios/exercicio-4/index.html">Exercício 4: Criando uma Tabela de Inscritos.</a>
+      </nav>
+      <hr>
+    </header>
+
     <h1>Criação de tabelas</h1>
-    <a href="http://localhost:5500">Retorne para a pagina de navegação</a>
 
     <h2>Tabela 1</h2>
     <table>
