--- a/html/tipos_de_input/index.html
+++ b/html/tipos_de_input/index.html
@@ -6,7 +6,15 @@
     <title>Conhecendo os tipos de input</title>
   </head>
   <body>
-    <a href="http://localhost:5500">Retorne para a pagina de navegação</a>
+    <header>
+      <nav>
+        <a href="/html/formularios/index.html">Aula anterior: Trabalhando com formulários no HTML</a> | 
+        <a href="/">Central de aulas</a> | 
+        <a href="/html/exercicios/exercicio-5/index.html">Exercício 5: Formulário de Inscrição.</a>
+      </nav>
+      <hr>
+    </header>
+    
     <h1>Conhecendo os tipos de input</h1>
 
     <form>
