--- a/html/titulos_e_paragrafo/index.html
+++ b/html/titulos_e_paragrafo/index.html
@@ -6,7 +6,13 @@
     <title>Títulos e parágrafos</title>
   </head>
   <body>
-    <a href="/">Retorne para a pagina de navegação</a>
+    <header>
+      <nav>
+        <a href="/">Central de aulas</a> | 
+        <a href="/html/elementos_de_formatacao/index.html">Proxima aula: Elementos de formatação.</a>
+      </nav>
+      <hr>
+    </header>
     <h1>Título 1: o título principal da página</h1>
     <p>Primeiro parágrafo</p>
     <h2>Título 2</h2>
