--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <ul>
             <li>
               <a href="html/titulos_e_paragrafo/index.html"
-                >Aula 1: Elementos de parágrafo e título.</a
+                >Aula 1: Elementos de títulos e parágrafos.</a
               >
             </li>
             <li>
@@ -49,7 +49,7 @@
             </li>
             <li>
               <a href="html/organizadores_de_codigo/div_e_span.html"
-                >Aula 6: Organizando o código com 'div' e 'span'.</a
+                >Aula 6: Organizando o código com "div" e "span".</a
               >
             </li>
             <li>
@@ -84,7 +84,7 @@
               <a href="html/semantica/index.html">Aula 13: Tags semânticas</a>
             </li>
             <li>
-              <a href="html/WAI-ARIA_e_acessibilidade/index.html">Aula 13: Atributos de acessibilidade WAI-ARIA</a>
+              <a href="html/WAI-ARIA_e_acessibilidade/index.html">Aula 14: Atributos de acessibilidade WAI-ARIA</a>
             </li>
           </ul>
         </nav>
