--- a/html/Comentarios/index.html
+++ b/html/Comentarios/index.html
@@ -6,7 +6,14 @@
     <title>Comentários</title>
   </head>
   <body>
-    <a href="http://localhost:5500">Retorne para a pagina de navegação</a>
+    <header>
+      <nav>
+        <a href="/html/elementos_de_formatacao/index.html">Aula anterior: Elementos de formatação.</a> | 
+        <a href="/">Central de aulas</a> | 
+        <a href="/html/imagens_e_atributos/index.html">Proxima aula: Elementos de imagens e atributos.</a>
+      </nav>
+      <hr>
+    </header>
     <!-- Esta é uma seção de cabeçalho -->
     <h1>Exemplo de Uso de Comentários</h1>
     <p>Bem-vindo ao nosso site!</p>
