--- a/html/ancoras_internas/index.html
+++ b/html/ancoras_internas/index.html
@@ -1,50 +1,125 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Trabalhando com Links internos</title>
-</head>
-<body>
-  <h1>Trabalhando com Links</h1>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Trabalhando com Links internos</title>
+  </head>
+  <body>
+    <header>
+      <nav>
+        <a href="/html/links_e_ancoragem/index.html">Aula anterior: Trabalhando com links</a> | 
+        <a href="/">Central de aulas</a> | 
+        <a href="/html/exercicios/exercicio-2/index.html">Exercício 2: Criando um site com navegação.</a>
+      </nav>
+      <hr>
+    </header>
 
-    <a href="http://localhost:5500">Retorne para a pagina de navegação</a>
+    <h1>Trabalhando com Links</h1>
 
-		<div>
-        <p>Navegue entre as seções dessa página:</p>
-        <a href="#titulo-1">Título 1</a> |
-        <a href="#titulo-2">Título 2</a> |
-        <a href="#titulo-3">Título 3</a> |
-        <a href="#titulo-4">Título 4</a> |
-        <a href="#titulo-5">Título 5</a>
+    <div>
+      <p>Navegue entre as seções dessa página:</p>
+      <a href="#titulo-1">Título 1</a> | <a href="#titulo-2">Título 2</a> |
+      <a href="#titulo-3">Título 3</a> | <a href="#titulo-4">Título 4</a> |
+      <a href="#titulo-5">Título 5</a>
     </div>
 
     <h2 id="titulo-1">Título 1</h2>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum necessitatibus fugit rerum at rem. Nisi, debitis ad suscipit a dignissimos sed repellendus commodi reprehenderit excepturi, eos praesentium perspiciatis ipsa repellat?</p>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum necessitatibus fugit rerum at rem. Nisi, debitis ad suscipit a dignissimos sed repellendus commodi reprehenderit excepturi, eos praesentium perspiciatis ipsa repellat?</p>
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum
+      necessitatibus fugit rerum at rem. Nisi, debitis ad suscipit a dignissimos
+      sed repellendus commodi reprehenderit excepturi, eos praesentium
+      perspiciatis ipsa repellat?
+    </p>
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum
+      necessitatibus fugit rerum at rem. Nisi, debitis ad suscipit a dignissimos
+      sed repellendus commodi reprehenderit excepturi, eos praesentium
+      perspiciatis ipsa repellat?
+    </p>
 
     <h2 id="titulo-2">Título 2</h2>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum necessitatibus fugit rerum at rem. Nisi, debitis ad suscipit a dignissimos sed repellendus commodi reprehenderit excepturi, eos praesentium perspiciatis ipsa repellat?</p>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum necessitatibus fugit rerum at rem. Nisi, debitis ad suscipit a dignissimos sed repellendus commodi reprehenderit excepturi, eos praesentium perspiciatis ipsa repellat?</p>
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum
+      necessitatibus fugit rerum at rem. Nisi, debitis ad suscipit a dignissimos
+      sed repellendus commodi reprehenderit excepturi, eos praesentium
+      perspiciatis ipsa repellat?
+    </p>
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum
+      necessitatibus fugit rerum at rem. Nisi, debitis ad suscipit a dignissimos
+      sed repellendus commodi reprehenderit excepturi, eos praesentium
+      perspiciatis ipsa repellat?
+    </p>
 
     <h2 id="titulo-3">Título 3</h2>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum necessitatibus fugit rerum at rem. Nisi, debitis ad suscipit a dignissimos sed repellendus commodi reprehenderit excepturi, eos praesentium perspiciatis ipsa repellat?</p>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum necessitatibus fugit rerum at rem. Nisi, debitis ad suscipit a dignissimos sed repellendus commodi reprehenderit excepturi, eos praesentium perspiciatis ipsa repellat?</p>
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum
+      necessitatibus fugit rerum at rem. Nisi, debitis ad suscipit a dignissimos
+      sed repellendus commodi reprehenderit excepturi, eos praesentium
+      perspiciatis ipsa repellat?
+    </p>
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum
+      necessitatibus fugit rerum at rem. Nisi, debitis ad suscipit a dignissimos
+      sed repellendus commodi reprehenderit excepturi, eos praesentium
+      perspiciatis ipsa repellat?
+    </p>
 
     <h2 id="titulo-4">Título 4</h2>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum necessitatibus fugit rerum at rem. Nisi, debitis ad suscipit a dignissimos sed repellendus commodi reprehenderit excepturi, eos praesentium perspiciatis ipsa repellat?</p>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum necessitatibus fugit rerum at rem. Nisi, debitis ad suscipit a dignissimos sed repellendus commodi reprehenderit excepturi, eos praesentium perspiciatis ipsa repellat?</p>
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum
+      necessitatibus fugit rerum at rem. Nisi, debitis ad suscipit a dignissimos
+      sed repellendus commodi reprehenderit excepturi, eos praesentium
+      perspiciatis ipsa repellat?
+    </p>
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum
+      necessitatibus fugit rerum at rem. Nisi, debitis ad suscipit a dignissimos
+      sed repellendus commodi reprehenderit excepturi, eos praesentium
+      perspiciatis ipsa repellat?
+    </p>
 
     <h2 id="titulo-5">Título 5</h2>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum necessitatibus fugit rerum at rem. Nisi, debitis ad suscipit a dignissimos sed repellendus commodi reprehenderit excepturi, eos praesentium perspiciatis ipsa repellat?</p>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum necessitatibus fugit rerum at rem. Nisi, debitis ad suscipit a dignissimos sed repellendus commodi reprehenderit excepturi, eos praesentium perspiciatis ipsa repellat?</p>
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum
+      necessitatibus fugit rerum at rem. Nisi, debitis ad suscipit a dignissimos
+      sed repellendus commodi reprehenderit excepturi, eos praesentium
+      perspiciatis ipsa repellat?
+    </p>
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum
+      necessitatibus fugit rerum at rem. Nisi, debitis ad suscipit a dignissimos
+      sed repellendus commodi reprehenderit excepturi, eos praesentium
+      perspiciatis ipsa repellat?
+    </p>
 
     <h2 id="titulo-6">Título 6</h2>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum necessitatibus fugit rerum at rem. Nisi, debitis ad suscipit a dignissimos sed repellendus commodi reprehenderit excepturi, eos praesentium perspiciatis ipsa repellat?</p>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum necessitatibus fugit rerum at rem. Nisi, debitis ad suscipit a dignissimos sed repellendus commodi reprehenderit excepturi, eos praesentium perspiciatis ipsa repellat?</p>
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum
+      necessitatibus fugit rerum at rem. Nisi, debitis ad suscipit a dignissimos
+      sed repellendus commodi reprehenderit excepturi, eos praesentium
+      perspiciatis ipsa repellat?
+    </p>
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum
+      necessitatibus fugit rerum at rem. Nisi, debitis ad suscipit a dignissimos
+      sed repellendus commodi reprehenderit excepturi, eos praesentium
+      perspiciatis ipsa repellat?
+    </p>
 
     <h2 id="titulo-7">Título 7</h2>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum necessitatibus fugit rerum at rem. Nisi, debitis ad suscipit a dignissimos sed repellendus commodi reprehenderit excepturi, eos praesentium perspiciatis ipsa repellat?</p>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum necessitatibus fugit rerum at rem. Nisi, debitis ad suscipit a dignissimos sed repellendus commodi reprehenderit excepturi, eos praesentium perspiciatis ipsa repellat?</p>
-</body>
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum
+      necessitatibus fugit rerum at rem. Nisi, debitis ad suscipit a dignissimos
+      sed repellendus commodi reprehenderit excepturi, eos praesentium
+      perspiciatis ipsa repellat?
+    </p>
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum
+      necessitatibus fugit rerum at rem. Nisi, debitis ad suscipit a dignissimos
+      sed repellendus commodi reprehenderit excepturi, eos praesentium
+      perspiciatis ipsa repellat?
+    </p>
+  </body>
 </html>
