--- a/html/exercicios/exercicio-2/index.html
+++ b/html/exercicios/exercicio-2/index.html
@@ -3,12 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Página inicial</title>
+    <title>Exercício 2: Site com navegação</title>
   </head>
-  <body>
+  <body></body>
+    <header>
+      <nav>
+        <a href="/html/ancoras_internas/index.html">Aula anterior: Links internos</a> | 
+        <a href="/">Central de aulas</a> | 
+        <a href="/html/listas/index.html">Proxima aula: Trabalhando com listas</a>
+      </nav>
+      <hr>
+    </header>
+
     <h1>TechWare Solutions</h1>
     <nav>
-      <a href="http://localhost:5500">Retorne para a pagina de navegação</a><br>
       <a href="/html/exercicios/exercicio-2/servicos.html">Serviços</a> |
       <a href="/html/exercicios/exercicio-2/contato.html">Contatos</a>
     </nav>
