--- a/html/exercicios/exercicio-final/contato.html
+++ b/html/exercicios/exercicio-final/contato.html
@@ -7,10 +7,15 @@
   </head>
   <body>
     <header>
+      <nav>
+        <a href="/html/WAI-ARIA_e_acessibilidade/index.html">Aula anterior: Atributos de acessibilidade WAI-ARIA</a> | 
+        <a href="/">Central de aulas</a>
+      </nav>
+      <br>
+      
       <strong>Escritório de Contabilidade ABC</strong>
       <nav>
         <ul>
-          <li><a href="http://localhost:5500">Retorne para a página de navegação</a></li>
           <li><a href="index.html">Inicio</a></li>
           <li><a href="sobre_nos.html">Sobre nós</a></li>
           <li><a href="servicos.html">Serviços</a></li>
@@ -27,9 +32,9 @@
         <address>
           <h2>Informações de contato</h2>
           <ul>
-            <li>Email: contato@escritorioabc.com</li>
-            <li>Telefone: (11) 1234-5678</li>
-            <li>Endereço: Rua das Flores, 123 - São Paulo/SP</li>
+            <li>Email: <a href="mailto:contato@escritorioabc.com">contato@escritorioabc.com</a></li>
+            <li>Telefone: <a href="tel:+5511999999999">+55 (11) 99999-9999</a></li>
+            <li>Endereço: <a href="https://maps.app.goo.gl/iYptXTrXSwyWtCWPA" target="_blank">Rua das Flores, 123 - São Paulo/SP</a></li>
           </ul>
         </address>
         <address>
