--- a/html/exercicios/exercicio-final/index.html
+++ b/html/exercicios/exercicio-final/index.html
@@ -9,10 +9,14 @@
   </head>
   <body>
     <header>
+      <nav>
+        <a href="/html/WAI-ARIA_e_acessibilidade/index.html">Aula anterior: Atributos de acessibilidade WAI-ARIA</a> | 
+        <a href="/">Central de aulas</a>
+      </nav>
+      <br>
       <strong>Escritório de Contabilidade ABC</strong>
       <nav>
         <ul>
-          <li><a href="http://localhost:5500">Retorne para a página de navegação</a></li>
           <li><a href="sobre_nos.html">Sobre nós</a></li>
           <li><a href="servicos.html">Serviços</a></li>
           <li><a href="contato.html">Contato</a></li>
