--- a/html/formularios/index.html
+++ b/html/formularios/index.html
@@ -6,7 +6,15 @@
     <title>Formulários no HTML</title>
   </head>
   <body>
-    <a href="http://localhost:5500">Retorne para a pagina de navegação</a>
+    <header>
+      <nav>
+        <a href="/html/exercicios/exercicio-4/index.html">Exercício 4: Criando uma Tabela de Inscritos.</a> | 
+        <a href="/">Central de aulas</a> | 
+        <a href="/html/tipos_de_input/index.html">Proxima aula: Conhecendo os tipos de input no HTML</a>
+      </nav>
+      <hr>
+    </header>
+    
     <h1>Formulários no HTML</h1>
 
     <form action="http://google.com/search" method="get" target="_blank">
