--- a/html/semantica/index.html
+++ b/html/semantica/index.html
@@ -8,7 +8,12 @@
   </head>
   <body>
     <header>
-      <a href="http://localhost:5500">Retorne para a pagina de navegação</a>
+      <nav>
+        <a href="/html/exercicios/exercicio-5/index.html">Exercício 5: Formulário de Inscrição.</a> | 
+        <a href="/">Central de aulas</a> | 
+        <a href="/html/WAI-ARIA_e_acessibilidade/index.html">Proxima aula: Atributos de acessibilidade WAI-ARIA</a>
+      </nav>
+
       <h1>Tags Semânticas</h1>
       <nav>
         <ul>
