feat: the first CSS lesson has been added

--- a/index.html
+++ b/index.html
@@ -127,6 +127,13 @@
       <section id="CSS">
         <h2>CSS</h2>
         <h4>Aulas</h4>
+        <nav>
+          <ul>
+            <li>
+              <a href="css/primeiro_código_CSS/index.html">Aula 1: Seu Primeiro Código CSS.</a              >
+            </li>
+          </ul>
+        </nav>
         <h4>Exercícios</h4>
       </section>
       <section id="Tailwind">
