feat: The lesson about background and border has been added

--- a/css/primeiro_código_CSS/index.html
+++ b/css/primeiro_código_CSS/index.html
@@ -18,7 +18,7 @@
     <header>
       <nav>
         <a href="/">Central de aulas</a> | 
-        <a href="/css/">Proxima aula: .</a>
+        <a href="/css/background_e_border/index.html">Proxima aula: Background e Border.</a>
       </nav>
       <hr>
     </header>
