--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       name="description"
       content="Site utilizado somente para postar recursos sobre estudos de linguagens de programação."
     />
+    <link rel="stylesheet" href="style.css" />
     <title>links das aulas</title>
   </head>
   <body>
@@ -138,6 +139,11 @@
             <li>
               <a href="css/primeiro_código_CSS/index.html"
                 >Aula 1: Seu Primeiro Código CSS.</a
+              >
+            </li>
+            <li>
+              <a href="css/background_e_border/index.html"
+                >Aula 2: Background e Border.</a
               >
             </li>
           </ul>
