feat: Added Exercise 1 styling a postcard

--- a/css/background_e_border/index.html
+++ b/css/background_e_border/index.html
@@ -11,7 +11,7 @@
       <nav>
         <a href="/css/primeiro_código_CSS/index.html">Aula anterior: Primeiro código CSS.</a> |
         <a href="/">Central de aulas</a> |
-        <a href="/css/">Proxima aula: .</a>
+        <a href="/css/exercicios/exercicio_1/index.html">Exercício 1: Estilizando um cartão postal.</a>
       </nav>
       <h1>Background e Border</h1>
     </header>
