--- a/index.html
+++ b/index.html
@@ -149,6 +149,13 @@
           </ul>
         </nav>
         <h3>Exercícios</h3>
+        <nav>
+          <ul>
+            <li>
+              <a href="css/exercicios/exercicio_1/index.html">Exercício 1: Estilizando um cartão postal</a>
+            </li>
+          </ul>
+        </nav>
       </section>
       <section id="Tailwind">
         <h2>JavaScript</h2>
