feat: Margin and padding lesson added

--- a/css/exercicios/exercicio_1/index.html
+++ b/css/exercicios/exercicio_1/index.html
@@ -16,7 +16,7 @@
           <a href="/">Central de aulas</a> 
         </button>
         <button class="nav_pages">
-          <a href="/css/margin_e_padding/index.html">Proxima aula: Box Model: margin e padding.</a>
+          <a href="/css/margin_e_padding/index.html">Proxima aula: margin e padding.</a>
         </button>
       </nav>
         <h1>Bem-vindo a Fernando de Noronha</h1>
