--- a/index.html
+++ b/index.html
@@ -146,6 +146,16 @@
                 >Aula 2: Background e Border.</a
               >
             </li>
+            <li>
+              <a href="css/margin_e_padding/index.html"
+                >Aula 3: Margin e padding.</a
+              >
+            </li>
+            <li>
+              <a href="css/tipos_de_display/index.html"
+                >Aula 4: Tipos de display.</a
+              >
+            </li>
           </ul>
         </nav>
         <h3>Exercícios</h3>
