feat: Added the lesson on Display Types

--- a/css/margin_e_padding/index.html
+++ b/css/margin_e_padding/index.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <title>Box Model: Margem e Preenchimento</title>
-</head>
-<body>
-  <header>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Box Model: Margem e Preenchimento</title>
+  </head>
+  <body>
+    <header>
       <nav>
         <button class="nav_pages">
-          <a href="/css/exercicios/exercicio_1/index.html">Exercício 1: Estilizando um cartão postal.</a> 
+          <a href="/css/exercicios/exercicio_1/index.html">Exercício 1: Estilizando um cartão postal.</a>
         </button>
         <button class="nav_pages">
-          <a href="/">Central de aulas</a> 
+          <a href="/">Central de aulas</a>
         </button>
         <button class="nav_pages">
-          <a href="/css/tipos_de_display/index.html">Proxima aula: Tipos de display.</a>
+          <a href="/css/tipos_de_display/index.html"
+            >Proxima aula: Tipos de display.</a
+          >
         </button>
       </nav>
       <h1>Box Model: Margem e Preenchimento</h1>
@@ -29,5 +31,5 @@
     <div class="box box2">
       <p>Outra caixa com margem e preenchimento.</p>
     </div>
-</body>
+  </body>
 </html>
