--- a/index.html
+++ b/index.html
@@ -156,6 +156,11 @@
                 >Aula 4: Tipos de display.</a
               >
             </li>
+            <li>
+              <a href="css/seletores_basicos/index.html"
+                >Aula 5: Seletores básicos.</a
+              >
+            </li>
           </ul>
         </nav>
         <h3>Exercícios</h3>
