--- a/index.html
+++ b/index.html
@@ -167,7 +167,10 @@
         <nav>
           <ul>
             <li>
-              <a href="css/exercicios/exercicio_1/index.html">Exercício 1: Estilizando um cartão postal</a>
+              <a href="css/exercicios/exercicio_1/index.html">Exercício 1: Estilizando um cartão postal.</a>
+            </li>
+            <li>
+              <a href="css/exercicios/exercicio_2/index.html">Exercício 2: </a>
             </li>
           </ul>
         </nav>
