feat: The second exercise has been added

--- a/css/seletores_basicos/index.html
+++ b/css/seletores_basicos/index.html
@@ -18,7 +18,7 @@
           <a class="nav_a" href="/">Central de aulas</a>
         </button>
         <button class="nav_pages">
-          <a class="nav_a" href="/css/exercicios/exercicio_2/index.html">Exercício 2: .</a>
+          <a class="nav_a" href="/css/exercicios/exercicio_2/index.html">Exercício 2: Sistema Administrativo.</a>
         </button>
       </nav>
       <h1>Seletores Básicos do CSS</h1>
