--- a/index.html
+++ b/index.html
@@ -161,6 +161,11 @@
                 >Aula 5: Seletores básicos.</a
               >
             </li>
+            <li>
+              <a href="css/textos_e_fontes/index.html"
+                >Aula 6: Textos e fontes.</a
+              >
+            </li>
           </ul>
         </nav>
         <h3>Exercícios</h3>
@@ -170,7 +175,7 @@
               <a href="css/exercicios/exercicio_1/index.html">Exercício 1: Estilizando um cartão postal.</a>
             </li>
             <li>
-              <a href="css/exercicios/exercicio_2/index.html">Exercício 2: </a>
+              <a href="css/exercicios/exercicio_2/index.html">Exercício 2: Sistema Administrativo</a>
             </li>
           </ul>
         </nav>
