feat: The lesson about units of measurement in CSS has been added

--- a/css/google_fonts/index.html
+++ b/css/google_fonts/index.html
@@ -13,15 +13,11 @@
   <body>
     <header>
       <nav class="nav_main">
-        <a class="nav_pages" href="/css/textos_e_fontes/index.html"
-          >Aula anterior: Textos e Fontes.</a
-        >
+        <a class="nav_pages" href="/css/textos_e_fontes/index.html">Aula anterior: Textos e Fontes.</a>
         <a class="nav_pages" href="/">Central de aulas</a>
-        <a class="nav_pages" href="/css"
-          >Proxima aula: .</a
-        >
+        <a class="nav_pages" href="/css/unidades_de_medida/index.html">Proxima aula: Unidades de Medida.</a>
       </nav>
-      <h1></h1>
+      <h1>Usando o Google Fonts</h1>
     </header>
 
     <section>
