--- a/index.html
+++ b/index.html
@@ -166,6 +166,16 @@
                 >Aula 6: Textos e fontes.</a
               >
             </li>
+            <li>
+              <a href="css/google_fonts/index.html"
+                >Aula 7: Usando o Google Fonts.</a
+              >
+            </li>
+            <li>
+              <a href="css/unidades_de_medida/index.html"
+                >Aula 8: Unidades de Medida.</a
+              >
+            </li>
           </ul>
         </nav>
         <h3>Exercícios</h3>
@@ -175,7 +185,10 @@
               <a href="css/exercicios/exercicio_1/index.html">Exercício 1: Estilizando um cartão postal.</a>
             </li>
             <li>
-              <a href="css/exercicios/exercicio_2/index.html">Exercício 2: Sistema Administrativo</a>
+              <a href="css/exercicios/exercicio_2/index.html">Exercício 2: Sistema Administrativo.</a>
+            </li>
+            <li>
+              <a href="css/exercicios/exercicio_3/index.html">Exercício 3: Catalogo de leitura.</a>
             </li>
           </ul>
         </nav>
