feat: Exercise 3 has been added to the Bookshelf reading catalog

--- a/css/unidades_de_medida/index.html
+++ b/css/unidades_de_medida/index.html
@@ -11,7 +11,7 @@
       <nav class="nav_main">
         <a class="nav_pages" href="/css/google_fonts/index.html">Aula anterior: Usando o Google Fonts.</a>
         <a class="nav_pages" href="/">Central de aulas</a>
-        <a class="nav_pages" href="/css/exercicios/exercicio_3/index.html">Exercício 3: Catalogo de leitura.</a>
+        <a class="nav_pages" href="/css/exercicios/exercicio_3/index.html">Exercício 3: Catálogo de leitura Bookshelf.</a>
       </nav>
       <h1>Unidades de Medida</h1>
     </header>
