--- a/index.html
+++ b/index.html
@@ -176,6 +176,11 @@
                 >Aula 8: Unidades de Medida.</a
               >
             </li>
+            <li>
+              <a href="css/Herança/index.html"
+                >Aula 9: Herança.</a
+              >
+            </li>
           </ul>
         </nav>
         <h3>Exercícios</h3>
@@ -188,7 +193,7 @@
               <a href="css/exercicios/exercicio_2/index.html">Exercício 2: Sistema Administrativo.</a>
             </li>
             <li>
-              <a href="css/exercicios/exercicio_3/index.html">Exercício 3: Catalogo de leitura.</a>
+              <a href="css/exercicios/exercicio_3/index.html">Exercício 3: Catálogo de leitura Bookshelf.</a>
             </li>
           </ul>
         </nav>
