feat: the class on inheritance in css was added

--- a/css/exercicios/exercicio_3/index.html
+++ b/css/exercicios/exercicio_3/index.html
@@ -13,7 +13,7 @@
           >Aula anterior: Unidades de Medida.</a
         >
         <a class="nav_pages" href="/">Central de aulas</a>
-        <a class="nav_pages" target="_blank" href="/css/heranca/index.html"
+        <a class="nav_pages" href="/css/heranca/index.html"
           >Proxima aula: Herança.</a
         >
       </nav>
