--- a/index.html
+++ b/index.html
@@ -177,8 +177,13 @@
               >
             </li>
             <li>
-              <a href="css/Herança/index.html"
+              <a href="css/heranca/index.html"
                 >Aula 9: Herança.</a
+              >
+            </li>
+            <li>
+              <a href="css/Especificidade/index.html"
+                >Aula 10: Especificidade.</a
               >
             </li>
           </ul>
