feat: The lesson on specificity has been added

--- a/index.html
+++ b/index.html
@@ -182,8 +182,13 @@
               >
             </li>
             <li>
-              <a href="css/Especificidade/index.html"
+              <a href="css/especificidade/index.html"
                 >Aula 10: Especificidade.</a
+              >
+            </li>
+            <li>
+              <a href="css/seletores_avançados/index.html"
+                >Aula 11: Seletores avançados.</a
               >
             </li>
           </ul>
