feat: Advanced selectors lesson added

--- a/index.html
+++ b/index.html
@@ -191,6 +191,11 @@
                 >Aula 11: Seletores avançados.</a
               >
             </li>
+            <li>
+              <a href="css/variaveis/index.html"
+                >Aula 11: Variáveis.</a
+              >
+            </li>
           </ul>
         </nav>
         <h3>Exercícios</h3>
