feat: The class on variables has been added

--- a/index.html
+++ b/index.html
@@ -210,10 +210,13 @@
             <li>
               <a href="css/exercicios/exercicio_3/index.html">Exercício 3: Catálogo de leitura Bookshelf.</a>
             </li>
+            <li>
+              <a href="css/exercicios/exercicio_final/index.html">Exercício final: .</a>
+            </li>
           </ul>
         </nav>
       </section>
-      <section id="Tailwind">
+      <section id="JavaScript">
         <h2>JavaScript</h2>
         <h3>Aulas</h3>
         <nav>
@@ -221,11 +224,10 @@
           </ul>
         </nav>
         <h3>Exercícios</h3>
-      </section>
-      <section id="JavaScript">
-        <h2></h2>
-        <h4>Aulas</h4>
-        <h4>Exercícios</h4>
+        <nav>
+          <ul>
+          </ul>
+        </nav>
       </section>
     </main>
   </body>
