feat: Added the final exercise 'creating a website with HTML and CSS.'

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
               <a href="css/exercicios/exercicio_3/index.html">Exercício 3: Catálogo de leitura Bookshelf.</a>
             </li>
             <li>
-              <a href="css/exercicios/exercicio_final/index.html">Exercício final: .</a>
+              <a href="css/exercicios/exercicio_final/index.html">Exercício final: Criando um site com HTML e CSS.</a>
             </li>
           </ul>
         </nav>
