--- a/index.html
+++ b/index.html
@@ -177,9 +177,7 @@
               >
             </li>
             <li>
-              <a href="css/heranca/index.html"
-                >Aula 9: Herança.</a
-              >
+              <a href="css/heranca/index.html">Aula 9: Herança.</a>
             </li>
             <li>
               <a href="css/especificidade/index.html"
@@ -192,9 +190,7 @@
               >
             </li>
             <li>
-              <a href="css/variaveis/index.html"
-                >Aula 11: Variáveis.</a
-              >
+              <a href="css/variaveis/index.html">Aula 11: Variáveis.</a>
             </li>
           </ul>
         </nav>
@@ -202,16 +198,24 @@
         <nav>
           <ul>
             <li>
-              <a href="css/exercicios/exercicio_1/index.html">Exercício 1: Estilizando um cartão postal.</a>
+              <a href="css/exercicios/exercicio_1/index.html"
+                >Exercício 1: Estilizando um cartão postal.</a
+              >
             </li>
             <li>
-              <a href="css/exercicios/exercicio_2/index.html">Exercício 2: Sistema Administrativo.</a>
+              <a href="css/exercicios/exercicio_2/index.html"
+                >Exercício 2: Sistema Administrativo.</a
+              >
             </li>
             <li>
-              <a href="css/exercicios/exercicio_3/index.html">Exercício 3: Catálogo de leitura Bookshelf.</a>
+              <a href="css/exercicios/exercicio_3/index.html"
+                >Exercício 3: Catálogo de leitura Bookshelf.</a
+              >
             </li>
             <li>
-              <a href="css/exercicios/exercicio_final/index.html">Exercício final: Criando um site com HTML e CSS.</a>
+              <a href="css/exercicios/exercicio_final/index.html"
+                >Exercício final: Criando um site com HTML e CSS.</a
+              >
             </li>
           </ul>
         </nav>
@@ -221,12 +225,14 @@
         <h3>Aulas</h3>
         <nav>
           <ul>
+            <li>
+              <a href="/js/tipos_de_dasos/index.html">Tipos de dados</a>
+            </li>
           </ul>
         </nav>
         <h3>Exercícios</h3>
         <nav>
-          <ul>
-          </ul>
+          <ul></ul>
         </nav>
       </section>
     </main>
